--- a/config.json
+++ b/config.json
@@ -30,34 +30,34 @@
   },
   "antiInbox": false,
   "language": "en",
-  "nickNameBot": "𝐂𝐘𝐁𝐄𝐑 𝐆𝐎𝐀𝐓 𝐁𝐎𝐓 ᵁᴸᴸᴬˢᴴ",
-  "prefix": "!",
+  "nickNameBot": "Lynx Chat Bot",
+  "prefix": "/",
   "usePrefix": {
     "enable": true,
     "adminUsePrefix": {
       "enable": true,
       "specificUids": [
-        "100082395531611",
-        "100015168369582"
+        "161579347293903",
+        "61579347293903"
       ]
     }
   },
   "adminOnly": {
     "enable": false,
     "ignoreCommand": [
-      "100082395531611",
-      "100015168369582"
+      "61579347293903",
+      "61579347293903"
     ]
   },
   "adminBot": [
-    "100082395531611",
-    "100015168369582"
+    "61579347293903",
+    "61579347293903"
   ],
   "whiteListMode": {
     "enable": false,
     "whiteListIds": [
-      "100082395531611",
-      "100015168369582"
+      "61579347293903",
+      "61579347293903"
     ]
   },
   "whiteListModeThread": {
